Added basic segment handling. Only iteration over cells of a segment possible at the moment.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,8 @@ ELSE()
 ENDIF()
 
 IF(CMAKE_COMPILER_IS_GNUCXX)
-   #ADD_DEFINITIONS(-Wall -O0 -g)
-   ADD_DEFINITIONS(-Wall -pedantic -O3)
+   ADD_DEFINITIONS(-Wall -O0 -g)
+   #ADD_DEFINITIONS(-Wall -pedantic -O3)
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
 #list all source files here
@@ -29,4 +29,4 @@ ADD_EXECUTABLE(test_simplex     examples/tests/test_simplex.cpp)
 ADD_EXECUTABLE(test_hypercube   examples/tests/test_hypercube.cpp)
 ADD_EXECUTABLE(test_coboundary  examples/tests/test_coboundary.cpp)
 ADD_EXECUTABLE(test_domain      examples/tests/test_domain.cpp)
-
+ADD_EXECUTABLE(test_segment     examples/tests/test_segment.cpp)
