Added new point type plus some basic algorithms.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,3 +30,4 @@ ADD_EXECUTABLE(test_hypercube   examples/tests/test_hypercube.cpp)
 ADD_EXECUTABLE(test_coboundary  examples/tests/test_coboundary.cpp)
 ADD_EXECUTABLE(test_domain      examples/tests/test_domain.cpp)
 ADD_EXECUTABLE(test_segment     examples/tests/test_segment.cpp)
+ADD_EXECUTABLE(test_point       examples/tests/test_point.cpp)
