Moved Voronoi information from ViennaSHE to ViennaGrid. Added centroid and circumcenter calculation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ ELSE()
 ENDIF()
 
 IF(CMAKE_COMPILER_IS_GNUCXX)
-   ADD_DEFINITIONS(-Wall -O0 -g)
+   ADD_DEFINITIONS(-Wall -pedantic -O0 -g)
    #ADD_DEFINITIONS(-Wall -pedantic -O3)
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
@@ -31,3 +31,6 @@ ADD_EXECUTABLE(test_coboundary  examples/tests/test_coboundary.cpp)
 ADD_EXECUTABLE(test_domain      examples/tests/test_domain.cpp)
 ADD_EXECUTABLE(test_segment     examples/tests/test_segment.cpp)
 ADD_EXECUTABLE(test_point       examples/tests/test_point.cpp)
+
+ADD_EXECUTABLE(voronoi_rect      examples/tutorial/voronoi_rect.cpp)
+ADD_EXECUTABLE(voronoi_triangle  examples/tutorial/voronoi_triangle.cpp)
