added first prototype of TDR reader (synopsis structure editor mesh format) based on HDF5 CMmakeFile uses the cmake::hdf5 module to determine if hdf5 is present. the includes, libs, and test executable    is built accordingly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,12 @@ SET(CMAKE_VERBOSE_MAKEFILE ON)
 INCLUDE_DIRECTORIES(".")
 INCLUDE_DIRECTORIES("../ViennaData")      #ViennaData
 
+#look for HDF5
+find_package(HDF5 COMPONENTS CXX)
+IF(HDF5_FOUND)
+   INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIRS})
+ENDIF(HDF5_FOUND)
+
 IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    INCLUDE_DIRECTORIES("/opt/local/include") 
 ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
@@ -27,15 +33,21 @@ IF(CMAKE_COMPILER_IS_GNUCXX)
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
 #list all source files here
-ADD_EXECUTABLE(test_io          examples/tests/test_io.cpp)
-ADD_EXECUTABLE(test_simplex     examples/tests/test_simplex.cpp)
-ADD_EXECUTABLE(test_hypercube   examples/tests/test_hypercube.cpp)
-ADD_EXECUTABLE(test_coboundary  examples/tests/test_coboundary.cpp)
-ADD_EXECUTABLE(test_domain      examples/tests/test_domain.cpp)
-ADD_EXECUTABLE(test_segment     examples/tests/test_segment.cpp)
-ADD_EXECUTABLE(test_point       examples/tests/test_point.cpp)
-ADD_EXECUTABLE(test_refinement       examples/tests/test_refinement.cpp)
+#ADD_EXECUTABLE(test_io          examples/tests/test_io.cpp)
+#ADD_EXECUTABLE(test_simplex     examples/tests/test_simplex.cpp)
+#ADD_EXECUTABLE(test_hypercube   examples/tests/test_hypercube.cpp)
+#ADD_EXECUTABLE(test_coboundary  examples/tests/test_coboundary.cpp)
+#ADD_EXECUTABLE(test_domain      examples/tests/test_domain.cpp)
+#ADD_EXECUTABLE(test_segment     examples/tests/test_segment.cpp)
+#ADD_EXECUTABLE(test_point       examples/tests/test_point.cpp)
+#ADD_EXECUTABLE(test_refinement  examples/tests/test_refinement.cpp)
+IF(HDF5_FOUND)
+   ADD_EXECUTABLE(test_tdr         examples/tests/test_tdr.cpp)
+   TARGET_LINK_LIBRARIES(test_tdr  ${HDF5_LIBRARIES})
+ENDIF(HDF5_FOUND)
 
-ADD_EXECUTABLE(voronoi_rect      examples/tutorial/voronoi_rect.cpp)
-ADD_EXECUTABLE(voronoi_triangle  examples/tutorial/voronoi_triangle.cpp)
-ADD_EXECUTABLE(voronoi_tet       examples/tutorial/voronoi_tet.cpp)
+#ADD_EXECUTABLE(voronoi_rect      examples/tutorial/voronoi_rect.cpp)
+#ADD_EXECUTABLE(voronoi_triangle  examples/tutorial/voronoi_triangle.cpp)
+#ADD_EXECUTABLE(voronoi_tet       examples/tutorial/voronoi_tet.cpp)
+
+
