Unified file headers, improved tests (still a lot more work left) and added better exception-based error reporting for file-io.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,8 +15,8 @@ IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 #add definitions, compiler switches, etc.
-ADD_DEFINITIONS(-Wall -pedantic -O3)
-#ADD_DEFINITIONS(-Wall -pedantic -O0 -g)
+#ADD_DEFINITIONS(-Wall -pedantic -O3)
+ADD_DEFINITIONS(-Wall -pedantic -O0 -g)
 
 
 #-----------------------------------------------------------------------------
