--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,7 +31,10 @@ ENDIF(BUILD_TESTING)
 
 #-----------------------------------------------------------------------------
 # add the source files which should be tested without the trailing *.cpp
-SET(PROGS coboundary domain hypercube io point refinement refinement2 refinement3 segment simplex voronoi_hex voronoi_rect voronoi_tet voronoi_triangle)
+SET(PROGS coboundary domain hypercube io point
+          refinement refinement2 refinement3 segment simplex
+          voronoi_hex voronoi_rect voronoi_tet voronoi_triangle
+          vtk_writer)
 #-----------------------------------------------------------------------------
 
 #-----------------------------------------------------------------------------
