--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -33,7 +33,7 @@ ENDIF(BUILD_TESTING)
 # add the source files which should be tested without the trailing *.cpp
 SET(PROGS coboundary domain hypercube io point
           refinement refinement2 refinement3 refinement-triangles
-          segment simplex
+          segment simplex surface
           voronoi_hex voronoi_rect voronoi_tet voronoi_triangle
           vtk_writer)
 #-----------------------------------------------------------------------------
