--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,7 +31,7 @@ ENDIF(BUILD_TESTING)
 
 #-----------------------------------------------------------------------------
 # add the source files which should be tested without the trailing *.cpp
-SET(PROGS boundary coboundary domain hypercube io point
+SET(PROGS boundary coboundary domain hypercube interface io point
           refinement refinement2 refinement3 refinement-triangles
           segment simplex surface
           voronoi_hex voronoi_rect voronoi_tet voronoi_triangle
