--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
 ADD_EXECUTABLE(algorithms          examples/tutorial/algorithms.cpp)
 ADD_EXECUTABLE(finite_volumes      examples/tutorial/finite_volumes.cpp)
+ADD_EXECUTABLE(io                  examples/tutorial/io.cpp)
 ADD_EXECUTABLE(iterators           examples/tutorial/iterators.cpp)
 ADD_EXECUTABLE(multi_segment       examples/tutorial/multi_segment.cpp)
 ADD_EXECUTABLE(slim_domain         examples/tutorial/slim_domain.cpp)
