--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,4 @@ ADD_EXECUTABLE(io                  examples/tutorial/io.cpp)
 ADD_EXECUTABLE(iterators           examples/tutorial/iterators.cpp)
 ADD_EXECUTABLE(multi_segment       examples/tutorial/multi_segment.cpp)
 ADD_EXECUTABLE(slim_domain         examples/tutorial/slim_domain.cpp)
+ADD_EXECUTABLE(store_access_data   examples/tutorial/store_access_data.cpp)
