adapted to current status of viennagrid_ng

--- a/examples/storage_layer/CMakeLists.txt
+++ b/examples/storage_layer/CMakeLists.txt
@@ -11,7 +11,7 @@ cmake_minimum_required(VERSION 2.6)
     SET (CMAKE_C_FLAGS_RELWITHDEBINFO "-O2 -g")
 
     SET (CMAKE_CXX_COMPILER             "/usr/bin/clang++")
-    SET (CMAKE_CXX_FLAGS                "-Wall")
+    SET (CMAKE_CXX_FLAGS                "-Wall -ferror-limit=10")
     SET (CMAKE_CXX_FLAGS_DEBUG          "-g")
     SET (CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
     SET (CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
@@ -50,8 +50,9 @@ MESSAGE( STATUS "CMAKE_CXX_FLAGS_DEBUG:         " ${CMAKE_CXX_FLAGS_DEBUG} )
 MESSAGE( STATUS "CMAKE_CXX_FLAGS_RELASEG        " ${CMAKE_CXX_FLAGS_RELEASE} )
 
 
+add_executable(container_test container_test.cpp)
 add_executable(collection_test collection_test.cpp)
 add_executable(container_collection_test container_collection_test.cpp)
 add_executable(container_collection_test_2 container_collection_test_2.cpp)
-#add_executable(view_test view_test.cpp)
 add_executable(element_test element_test.cpp)
+# add_executable(element_test_2 element_test_2.cpp)
