--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,11 +22,19 @@ IF(CMAKE_COMPILER_IS_GNUCXX)
    #ADD_DEFINITIONS(-Wall -pedantic -O3)
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
-ADD_EXECUTABLE(algorithms          examples/tutorial/algorithms.cpp)
-ADD_EXECUTABLE(domain_setup        examples/tutorial/domain_setup.cpp)
-ADD_EXECUTABLE(finite_volumes      examples/tutorial/finite_volumes.cpp)
-ADD_EXECUTABLE(io                  examples/tutorial/io.cpp)
-ADD_EXECUTABLE(iterators           examples/tutorial/iterators.cpp)
-ADD_EXECUTABLE(multi_segment       examples/tutorial/multi_segment.cpp)
-ADD_EXECUTABLE(slim_domain         examples/tutorial/slim_domain.cpp)
-ADD_EXECUTABLE(store_access_data   examples/tutorial/store_access_data.cpp)
+#ADD_EXECUTABLE(algorithms          examples/tutorial/algorithms.cpp)
+#ADD_EXECUTABLE(domain_setup        examples/tutorial/domain_setup.cpp)
+#ADD_EXECUTABLE(finite_volumes      examples/tutorial/finite_volumes.cpp)
+#ADD_EXECUTABLE(io                  examples/tutorial/io.cpp)
+#ADD_EXECUTABLE(iterators           examples/tutorial/iterators.cpp)
+#ADD_EXECUTABLE(multi_segment       examples/tutorial/multi_segment.cpp)
+#ADD_EXECUTABLE(slim_domain         examples/tutorial/slim_domain.cpp)
+#ADD_EXECUTABLE(store_access_data   examples/tutorial/store_access_data.cpp)
+
+
+ADD_EXECUTABLE(container_test                  examples/storage_layer/container_test.cpp)
+ADD_EXECUTABLE(collection_test                 examples/storage_layer/collection_test.cpp)
+ADD_EXECUTABLE(container_collection_test       examples/storage_layer/container_collection_test.cpp)
+ADD_EXECUTABLE(container_collection_test_2     examples/storage_layer/container_collection_test_2.cpp)
+ADD_EXECUTABLE(element_test                    examples/storage_layer/element_test.cpp)
+# ADD_EXECUTABLE(element_test_2                  examples/storage_layer/element_test_2.cpp)
