* Moved all refinement-stuff to a separate subfolder refinement/ * Removed vertex_t, integrated it in element_t. Vertices are now completely free of geometry information (no point member) * bnd_cells-information for simplices is now generated automatically for general simplices (no more specializations for triangles and tetrahedra) * bnd_cells-inserter works for k <= 2, n arbitrary. Automatic extension a bit more tricky, maybe use controlled copy&paste for 3 <= k <= 5. * Added a bunch of comments to element_test_2.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,5 +36,5 @@ ADD_EXECUTABLE(container_test                  examples/storage_layer/container_
 ADD_EXECUTABLE(collection_test                 examples/storage_layer/collection_test.cpp)
 ADD_EXECUTABLE(container_collection_test       examples/storage_layer/container_collection_test.cpp)
 ADD_EXECUTABLE(container_collection_test_2     examples/storage_layer/container_collection_test_2.cpp)
-ADD_EXECUTABLE(element_test                    examples/storage_layer/element_test.cpp)
-# ADD_EXECUTABLE(element_test_2                  examples/storage_layer/element_test_2.cpp)
+#ADD_EXECUTABLE(element_test                    examples/storage_layer/element_test.cpp)
+ADD_EXECUTABLE(element_test_2                  examples/storage_layer/element_test_2.cpp)
