--- a/examples/storage_layer/CMakeLists.txt
+++ b/examples/storage_layer/CMakeLists.txt
@@ -57,3 +57,4 @@ add_executable(container_collection_test_2 container_collection_test_2.cpp)
 # add_executable(element_test element_test.cpp)
 add_executable(element_test_2 element_test_2.cpp)
 add_executable(element_test_3 element_test_3.cpp)
+add_executable(domain_test domain_test.cpp)
