--- a/examples/storage_layer/CMakeLists.txt
+++ b/examples/storage_layer/CMakeLists.txt
@@ -60,3 +60,5 @@ add_executable(element_test_3 element_test_3.cpp)
 add_executable(domain_test domain_test.cpp)
 add_executable(domain_test_2 domain_test_2.cpp)
 add_executable(domain_test_3 domain_test_3.cpp)
+add_executable(domain_test_4 domain_test_4.cpp)
+add_executable(domain_test_5 domain_test_5.cpp)
