--- a/examples/storage_layer/CMakeLists.txt
+++ b/examples/storage_layer/CMakeLists.txt
@@ -62,3 +62,5 @@ add_executable(domain_test_2 domain_test_2.cpp)
 add_executable(domain_test_3 domain_test_3.cpp)
 add_executable(domain_test_4 domain_test_4.cpp)
 add_executable(domain_test_5 domain_test_5.cpp)
+add_executable(coboundary_iteration coboundary_iteration.cpp)
+add_executable(neighbour_iteration neighbour_iteration.cpp)
