adapted finite_volumes, work in progress

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,8 +44,8 @@ IF(CMAKE_COMPILER_IS_GNUCXX)
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
 ADD_EXECUTABLE(algorithms          examples/tutorial/algorithms.cpp)
-#ADD_EXECUTABLE(domain_setup        examples/tutorial/domain_setup.cpp)
-#ADD_EXECUTABLE(finite_volumes      examples/tutorial/finite_volumes.cpp)
+ADD_EXECUTABLE(domain_setup        examples/tutorial/domain_setup.cpp)
+ADD_EXECUTABLE(finite_volumes      examples/tutorial/finite_volumes.cpp)
 #ADD_EXECUTABLE(io                  examples/tutorial/io.cpp)
 #ADD_EXECUTABLE(iterators           examples/tutorial/iterators.cpp)
 #ADD_EXECUTABLE(multi_segment       examples/tutorial/multi_segment.cpp)
