--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,57 +1,18 @@
 
-PROJECT(viennagrid)
+# tests with CPU backend
+foreach(PROG boundary coboundary 
+             distance_1d distance_2d distance_3d distance_boundary
+             domain hypercube interface io point
+             refinement refinement2 refinement3 refinement-triangles
+             segment simplex surface
+             voronoi_hex voronoi_rect voronoi_tet voronoi_triangle voronoi_line
+             vtk_writer serialization)
+   add_executable(${PROG}-test src/${PROG}.cpp)
+   add_test(${PROG} ${PROG}-test)
+endforeach(PROG)
 
-cmake_minimum_required(VERSION 2.6)
-
-#if you don't want the full compiler output, remove the following line
-SET(CMAKE_VERBOSE_MAKEFILE ON)
-
-#specify include directory
-INCLUDE_DIRECTORIES("..")
-INCLUDE_DIRECTORIES("../../ViennaData/")
-
-IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-   INCLUDE_DIRECTORIES("/opt/local/include") 
-ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-
-#add definitions, compiler switches, etc.
-#ADD_DEFINITIONS(-Wall -pedantic -O3)
-IF(CMAKE_COMPILER_IS_GNUCXX)
-   ADD_DEFINITIONS(-Wall -pedantic -O0 -g)
-   #ADD_DEFINITIONS(-Wall -pedantic -O3)
-ENDIF(CMAKE_COMPILER_IS_GNUCXX)
-
-
-#-----------------------------------------------------------------------------
-# Configure Dart testing support.  This should be done before any
-# MESSAGE(FATAL_ERROR ...) commands are invoked.
-INCLUDE(CTest)
-ENABLE_TESTING()
-IF(BUILD_TESTING)
-  SET(BUILDNAME "${BUILDNAME}" CACHE STRING "Name of build on the dashboard")
-  MARK_AS_ADVANCED(BUILDNAME)
-ENDIF(BUILD_TESTING)
-
-#-----------------------------------------------------------------------------
-# add the source files which should be tested without the trailing *.cpp
-SET(PROGS boundary coboundary 
-          distance_1d distance_2d distance_3d distance_boundary
-          domain hypercube interface io point
-          refinement refinement2 refinement3 refinement-triangles
-          segment simplex surface
-          voronoi_hex voronoi_rect voronoi_tet voronoi_triangle voronoi_line
-          vtk_writer serialization)
-#-----------------------------------------------------------------------------
-
-#-----------------------------------------------------------------------------
-FOREACH(PROG ${PROGS})
-   ADD_EXECUTABLE(${PROG} ../src/${PROG}.cpp)
-   ADD_test(${PROG} ${PROG})
-ENDFOREACH(PROG)
-#-----------------------------------------------------------------------------
-
-ADD_EXECUTABLE(external_linkage  ../src/external_1.cpp
-                                 ../src/external_2.cpp)
+ADD_EXECUTABLE(external_linkage  src/external_1.cpp
+                                 src/external_2.cpp)
 ADD_test(external_linkage external_linkage)
 
-TARGET_LINK_LIBRARIES(serialization       boost_serialization)
+
