added element_test_4, polygon_test and plc_test

--- a/examples/storage_layer/CMakeLists.txt
+++ b/examples/storage_layer/CMakeLists.txt
@@ -7,10 +7,13 @@ add_executable(container_test container_test.cpp)
 #add_executable(element_test element_test.cpp)
 add_executable(element_test_2 element_test_2.cpp)
 add_executable(element_test_3 element_test_3.cpp)
+add_executable(element_test_4 element_test_4.cpp)
 add_executable(domain_test domain_test.cpp)
 add_executable(domain_test_2 domain_test_2.cpp)
 add_executable(domain_test_3 domain_test_3.cpp)
 add_executable(domain_test_4 domain_test_4.cpp)
 add_executable(domain_test_5 domain_test_5.cpp)
 add_executable(neighbour_iteration neighbour_iteration.cpp)
+add_executable(polygon_test polygon_test.cpp)
+add_executable(plc_test plc_test.cpp)
 #add_executable(view_test view_test.cpp)
