--- a/examples/storage_layer/CMakeLists.txt
+++ b/examples/storage_layer/CMakeLists.txt
@@ -15,5 +15,6 @@ add_executable(domain_test_4 domain_test_4.cpp)
 add_executable(domain_test_5 domain_test_5.cpp)
 add_executable(neighbour_iteration neighbour_iteration.cpp)
 add_executable(polygon_test polygon_test.cpp)
+add_executable(point_test point_test.cpp)
 add_executable(plc_test plc_test.cpp)
 #add_executable(view_test view_test.cpp)
