added plc reader test

--- a/examples/storage_layer/CMakeLists.txt
+++ b/examples/storage_layer/CMakeLists.txt
@@ -17,4 +17,5 @@ add_executable(neighbour_iteration neighbour_iteration.cpp)
 add_executable(polygon_test polygon_test.cpp)
 add_executable(point_test point_test.cpp)
 add_executable(plc_test plc_test.cpp)
+add_executable(plc_reader_test plc_reader_test.cpp)
 #add_executable(view_test view_test.cpp)
