added element deletion and refinement test

--- a/examples/storage_layer/CMakeLists.txt
+++ b/examples/storage_layer/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(element_test_2 element_test_2.cpp)
 add_executable(element_test_3 element_test_3.cpp)
 add_executable(element_test_4 element_test_4.cpp)
 add_executable(element_erase_test element_erase_test.cpp)
+add_executable(element_erase_refine_test element_erase_refine_test.cpp)
 add_executable(domain_test domain_test.cpp)
 add_executable(domain_test_2 domain_test_2.cpp)
 add_executable(domain_test_3 domain_test_3.cpp)
