--- a/examples/storage_layer/CMakeLists.txt
+++ b/examples/storage_layer/CMakeLists.txt
@@ -21,4 +21,5 @@ add_executable(point_test point_test.cpp)
 add_executable(plc_test plc_test.cpp)
 add_executable(plc_reader_test plc_reader_test.cpp)
 add_executable(segments segments.cpp)
+add_executable(handle_test handle_test.cpp)
 #add_executable(view_test view_test.cpp)
