--- a/examples/storage_layer/CMakeLists.txt
+++ b/examples/storage_layer/CMakeLists.txt
@@ -8,8 +8,8 @@ add_executable(container_test container_test.cpp)
 add_executable(element_test_2 element_test_2.cpp)
 add_executable(element_test_3 element_test_3.cpp)
 add_executable(element_test_4 element_test_4.cpp)
-add_executable(element_erase_test element_erase_test.cpp)
-add_executable(element_erase_refine_test element_erase_refine_test.cpp)
+# add_executable(element_erase_test element_erase_test.cpp)
+# add_executable(element_erase_refine_test element_erase_refine_test.cpp)
 add_executable(domain_test domain_test.cpp)
 add_executable(domain_test_2 domain_test_2.cpp)
 add_executable(domain_test_3 domain_test_3.cpp)
@@ -18,8 +18,9 @@ add_executable(domain_test_5 domain_test_5.cpp)
 add_executable(neighbour_iteration neighbour_iteration.cpp)
 add_executable(polygon_test polygon_test.cpp)
 add_executable(point_test point_test.cpp)
-add_executable(plc_test plc_test.cpp)
-add_executable(plc_reader_test plc_reader_test.cpp)
-add_executable(segments segments.cpp)
+# add_executable(plc_test plc_test.cpp)
+# add_executable(plc_reader_test plc_reader_test.cpp)
+# add_executable(segments segments.cpp)
 add_executable(handle_test handle_test.cpp)
+add_executable(accessor_test accessor_test.cpp)
 #add_executable(view_test view_test.cpp)
