Segmentation Object, Appendix Type for Domain & Segmentation
Implementation of Segmentation Object
 - takes care of segments, has view
 - segment iteration support (via view)
 - has support for appendix type
 - additional segment information via appendix type
 - segment information and view synchronizes
Domain has appendix support
 - coboundary, boundary & neighbour via appendix

--- a/examples/storage_layer/CMakeLists.txt
+++ b/examples/storage_layer/CMakeLists.txt
@@ -20,7 +20,7 @@ add_executable(polygon_test polygon_test.cpp)
 add_executable(point_test point_test.cpp)
 # add_executable(plc_test plc_test.cpp)
 # add_executable(plc_reader_test plc_reader_test.cpp)
-# add_executable(segments segments.cpp)
+add_executable(segments segments.cpp)
 add_executable(handle_test handle_test.cpp)
 add_executable(accessor_test accessor_test.cpp)
 #add_executable(view_test view_test.cpp)
